capitalize first letter on hover, etc for the top left watch/review/discover nav. fix spacing underneath by removing top align

--- a/app/styles/toolbar.css
+++ b/app/styles/toolbar.css
@@ -40,7 +40,6 @@ button {
 .toolbar .buttongroup span {
 	display: block;
 	position: absolute;
-	top: 20px;
 	left: 0;
 	right: 0;
 	text-align: center;
